<resources>
    <!-- App Name -->
    <string name="app_name">Pomodoro Timer</string>

    <!-- Pomodoro Screen -->
    <string name="focus_name">Focus</string>
    <string name="short_break_name">Short Break</string>
    <string name="long_break_name">Long Break</string>
    <string name="settings_description">Settings</string>
    <string name="play_description">Play</string>
    <string name="next_description">Next</string>

    <!-- Settings Modal -->
    <string name="settings_title">Settings</string>
    <string name="exit_description">Exit</string>
    <string name="dark_mode_text">Dark mode</string>
    <string name="focus_length_text">Focus length</string>
    <string name="short_break_length">Short break length</string>
    <string name="long_break_length">Long break length</string>
    <string name="pomodoro_until_long_break">Pomodoro until long break</string>
    <string name="auto_resume_timer">Auto resume timer</string>
    <string name="sound_text">Sound</string>
    <string name="dialog_number_positive_button">Set</string>
    <string name="dialog_number_negative_button">Cancel</string>
    <string name="dialog_number_title">Select a value</string>
    <string name="dialog_number_message_focus">Set focus minutes:</string>
    <string name="dialog_number_message_short_break">Set short break minutes:</string>
    <string name="dialog_number_message_long_break">Set long break minutes:</string>
    <string name="dialog_number_message_until_long">Set how many focus until long break:</string>

    <!-- Service -->
    <string name="service_description">Allows background countdown</string>
    <string name="notification_focus_title">Time to focus!</string>
    <string name="notification_short_break_title">Time for a short break!</string>
    <string name="notification_long_break_title">Time for a long break!</string>

</resources>